--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
 & .todo_app_container{
     height: 400px;
     width: 50%;
+    min-width: 500px;
     background-color: #e6dbdb;
     padding: 20px;
     border-radius: 10px;
@@ -17,7 +18,7 @@
     & .task_list {
         width: 100%;
         height: 50%;
-        
+
     }
 
 
